fix: crashes on some post variants
